--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "Devon Call Changes",
   "short_name": "Devon Call Changes",
-  "start_url": "/callchanges/",
-  "scope": "/callchanges/",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/callchanges/favicon.svg",
+      "src": "/favicon.svg",
       "sizes": "512x512"
     }
   ]
